examples/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supersix-http
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    run: supersix-http
  clusterIP: None
